--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix --cache",
-    "deploy": "npm run build-only && gh-pages -d dist"
+    "deploy": "npm run build-only && cp dist/index.html dist/404.html && gh-pages -d dist"
   },
   "dependencies": {
     "marked": "^16.4.1",
